feat: menu likes module
